# MediaCycle

./: .gitignore  .hgignore  AUTHORS  CMakeLists.txt  README  README.md  cross-mingw.txt
apps/: CMakeLists.txt
apps/archipelcycle-osg-qt/: CMakeLists.txt  Info.plist  main.cpp
apps/audiocycle-cli/: CMakeLists.txt
apps/audiocycle-loopjam/: ACAudioCycleLoopJam.cpp  ACAudioCycleLoopJam.h  CMakeLists.txt  main.cpp
apps/audiocycle-osg-cocoa/: ACAudioCycleOsgCocoa.h  ACAudioCycleOsgCocoa.mm  CMakeLists.txt  Info.plist  main.m
apps/audiocycle-osg-ipad/: ACAudioCycleOsgiPad.h  ACAudioCycleOsgiPad.mm  ACAudioCycleOsgiPadController.h  ACAudioCycleOsgiPadController.mm  ACAudioCycleOsgiPadView.h  ACAudioCycleOsgiPadView.mm  ACOsgiPadControlleriPad.xib  ACOsgiPadControlleriPhone.xib  CMakeLists.txt  Info.plist  MainWindowiPad.xib  MainWindowiPhone.xib  main.m  osgPlugins.h
apps/audiocycle-osg-qt/: ACAudioCycleOsgQt.cpp  ACAudioCycleOsgQt.h  ACAudioCycleOsgQt.ui  CMakeLists.txt  main.cpp
apps/audiocycle-seneffe/: ACMultiMediaCycleSeneffe.cpp  ACMultiMediaCycleSeneffe.h  CMakeLists.txt  main.cpp
apps/audiofeatures-cli/: CMakeLists.txt  main.cpp
apps/audiogarden-osg-qt/: ACAudioGardenOsgQt.cpp  ACAudioGardenOsgQt.h  ACAudioGardenOsgQt.ui  AudioGarden.icns  CMakeLists.txt  Info.plist  main.cpp
apps/audiometro-cli/: CMakeLists.txt
apps/audiometro-html5-qt/: CMakeLists.txt
apps/avlaughtercycle/: CMakeLists.txt  avlaughtercycle.cpp
apps/dancers/: CMakeLists.txt  main.cpp  run
apps/dancerscycle-cli/: ACDancersCycleCLI.cpp  ACDancersCycleCLI.h  CMakeLists.txt  run
apps/fingercycle-qt/: CMakeLists.txt  README  mainwindow.cpp  mainwindow.h  oscdock.cpp  oscdock.h  scribblearea.cpp  scribblearea.h
apps/imagecycle-html5-qt/: CMakeLists.txt
apps/imagecycle-osg-cocoa/: ACImageCycleOsgCocoa.h  ACImageCycleOsgCocoa.mm  CMakeLists.txt  Info.plist
apps/imagecycle-osg-qt/: ACImageCycleOsgQt.cpp  ACImageCycleOsgQt.h  ACImageCycleOsgQt.ui  CMakeLists.txt  main.cpp  settings.cpp  settings.h  settings.ui
apps/kinectcycle-qt/: CMakeLists.txt  KinectReader.pro  QKinectWrapper.cpp  QKinectWrapper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oscdock.cpp  oscdock.h  oscdock.ui
apps/laughfeatures-cli/: CMakeLists.txt  main.cpp
apps/laughtercycle-web/: laughtercycle-db-structure.sql
apps/listeningroom-osg-qt/: ACAudioCycleListeningRoom.cpp  ACAudioCycleListeningRoom.h  CMakeLists.txt  ListeningRoomLibraries.xml
apps/loopcycle-osg-qt/: CMakeLists.txt
apps/loopjam-compose-osg-qt/: CMakeLists.txt  main.cpp
apps/loopjam-install-osg-qt/: ACAudioCycleLoopJam.cpp  ACAudioCycleLoopJam.h  CMakeLists.txt  LoopJamLibrariesJIM2012.xml  main.cpp
apps/loopjam-osg-qt/: ACAudioCycleLoopJam.cpp  ACAudioCycleLoopJam.h  CMakeLists.txt  LoopJamLibraries.xml
apps/mashtacycle-osg-qt/: CMakeLists.txt
apps/mashtajam-osg-qt/: ACMashtaJam.cpp  ACMashtaJam.h  CMakeLists.txt  MashtaJamLibraries.xml
apps/mediacycle-cli/: CMakeLists.txt  main.cpp
apps/mediaworkflows-osg-qt/: CMakeLists.txt
apps/modelcycle-osg-cocoa/: ACModelCycleOsgCocoa.h  ACModelCycleOsgCocoa.mm  CMakeLists.txt  Info.plist
apps/multimediacycle-osg-qt/: ACMultiMediaCycleOsgQt.cpp  ACMultiMediaCycleOsgQt.h  ACMultiMediaCycleOsgQt.ui  CMakeLists.txt  main.cpp  pluginsTreeItem.cpp  pluginsTreeItem.h  pluginsTreeModel.cpp  pluginsTreeModel.h  settings.cpp  settings.h  settings.ui
apps/navimedbiodatascript/: CMakeLists.txt  NavimedBioDataScript.cpp
apps/navimedbiotreedatascript/: CMakeLists.txt  NavimedBioTreeDataScript.cpp
apps/navimedcycle-osg-qt/: CMakeLists.txt  main.cpp
apps/segmentation-cli/: CMakeLists.txt  main.cpp
apps/server-cli/: ACServerProcess.cpp  ACServerProcess.h  CMakeLists.txt
apps/testBuildXML/: CMakeLists.txt  TestBuildXML.cpp  TestBuildXML.h
apps/textcycle-osg-qt/: ACTextCycleOsgQt.cpp  ACTextCycleOsgQt.h  ACTextCycleOsgQt.ui  CMakeLists.txt  Info.plist  main.cpp  settings.cpp  settings.h  settings.ui
apps/videoPlayer-iVisit-qt/: CMakeLists.txt  iVisit.cpp  iVisit.h  iVisit.ui  main.cpp  mediaplayer.cpp  mediaplayer.h
armadillo/: ACMediaTimedFeature.cpp  ACMediaTimedFeature.h  Armadillo-utils.cpp  Armadillo-utils.h  CMakeLists.txt  blackman.h  cart2pol.h  cluster.cpp  cluster.h  concat.h  conv2.cpp  conv2.h  dct.cpp  dct.h  diagxcorr2.cpp  diagxcorr2.h  diff.h  euclideanDistance.h  fft-helper.cpp  fft-helper.h  fft.cpp  fft.h  fft2.cpp  fft2.h  find.cpp  find.h  findpeaks.h  hist.h  hist3.h  ifft2.cpp  ifft2.h  ismember.h  kcluster.h  linefit.h  max_index.h  melfilters.cpp  melfilters.h  min_index.h  modulation.cpp  modulation.h  (+15 more)
audio/: ACAudioFeatures.cpp  ACAudioFeatures.h  CMakeLists.txt
audioengine/: ACAudioEngine.cpp  ACAudioEngine.h  ACAudioFeedback.cpp  ACAudioFeedback.h  ACAudioRecorder.cpp  ACAudioRecorder.h  CMakeLists.txt  MyOpenALSupport.cpp  MyOpenALSupport.h  TiPhaseVocoder.c  fft-sptk.h  getmem.c
audiogarden/: AGSynthesis.cpp  AGSynthesis.h  CMakeLists.txt
cli/: CMakeLists.txt  main.cpp
core/: AC3DModel.cpp  AC3DModel.h  AC3DModelData.cpp  AC3DModelData.h  ACAbstractDefaultConfig.h  ACAudio.cpp  ACAudio.h  ACAudioData.cpp  ACAudioData.h  ACClusterPositionsPropellerPlugin.cpp  ACClusterPositionsPropellerPlugin.h  ACCosDistance.cpp  ACCosDistance.h  ACDistance.h  ACEuclideanDistance.cpp  ACEuclideanDistance.h  ACEuclideanKMeansPlugin.cpp  ACEuclideanKMeansPlugin.h  ACEventListener.cpp  ACEventListener.h  ACEventManager.cpp  ACEventManager.h  ACFFmpegInclude.h  ACFeaturesTypes.cpp  ACFeaturesTypes.h  ACImage.cpp  ACImage.h  ACImageData.cpp  ACImageData.h  ACKMeansPlugin.cpp  ACKMeansPlugin.h  ACMedia.cpp  ACMedia.h  ACMediaBrowser.cpp  ACMediaBrowser.h  ACMediaData.cpp  ACMediaData.h  ACMediaDocument.cpp  ACMediaDocument.h  ACMediaFactory.cpp  (+60 more)
fftooura/: CMakeLists.txt  fftsg.c  fftsg.cpp  fftsg2d.cpp  fftsg2d.h
lib/: CMakeLists.txt
libs/: CMakeLists.txt
plugins/: CMakeLists.txt
test/: CMakeLists.txt  avlaughtercycle.cpp
usability/: CMakeLists.txt
vamp-plugin-interface/: CMakeLists.txt  vamp-plugin-interface.cpp  vamp-plugin-interface.h
(+1702 files in other folders)
